# MaxScale

cmake/: FindMySQL.cmake
query_classifier/: query_classifier.cc  query_classifier.h
server/core/: CMakeLists.txt  dcb.c  gateway.c  sescmd.c
server/core/sescmd/: sescmd.c  sescmd_cursor.c  sescmd_list.c
server/core/test/: CMakeLists.txt  testsescmd.c
server/include/: dcb.h  sescmd.h
server/modules/filter/: CMakeLists.txt  mongofilter.c  mongofilter.cc  mongofilter.h
server/modules/filter/test/: CMakeLists.txt
server/modules/include/: readwritesplit2.h  readwritespliterror.h  readwritesplitsession.h
server/modules/protocol/: mysql_client.c
server/modules/routing/readwritesplit/: CMakeLists.txt  readwritesplit2.c  readwritespliterror.c  readwritesplitsession.c  rws.c  rws_error.c  rws_routing.c  rws_session.c  rws_utils.c
utils/: skygw_utils.cc  skygw_utils.h
