if(OLD_RWS)
  add_library(readwritesplit SHARED readwritesplit.c)
  target_link_libraries(readwritesplit ssl pthread log_manager utils query_classifier)
  install(TARGETS readwritesplit DESTINATION modules)
else()
  add_library(readwritesplit SHARED rws.c rws_session.c rws_error.c rws_utils.c rws_routing.c)
  target_link_libraries(readwritesplit ssl pthread log_manager utils query_classifier)
  install(TARGETS readwritesplit DESTINATION modules)
endif()

if(BUILD_TESTS)
add_subdirectory(test)
endif()
